# monedadelmundo

./: .cirrus.yml  .gitignore  CONTRIBUTING.md  COPYING  Makefile.am  README.md  REVIEWERS  SECURITY.md  configure.ac  libmonedadelmundoconsensus.pc.in  monedadelmundo.conf
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  libsecp256k1_config.h  monedadelmundo.sln  monedadelmundo_config.h.in  msvc-autogen.py  vcpkg.json
contrib/: README.md  install_db4.sh  monedadelmundo-cli.bash-completion  monedadelmundo-tx.bash-completion  monedadelmundod.bash-completion  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  assumeutxo.md  benchmarking.md  bips.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  monedadelmundo-conf.md  multiprocess.md  multisig-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-process.md  shared-libraries.md  tor.md  (+4 more)
doc/man/: Makefile.am  monedadelmundo-cli.1  monedadelmundo-qt.1  monedadelmundo-tx.1  monedadelmundo-util.1  monedadelmundo-wallet.1  monedadelmundod.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  chain.h  (+116 more)
(+751 files in other folders)
