dist_man1_MANS=

if BUILD_MONEDADELMUNDOD
  dist_man1_MANS+=monedadelmundod.1
endif

if ENABLE_QT
  dist_man1_MANS+=monedadelmundo-qt.1
endif

if BUILD_MONEDADELMUNDO_CLI
  dist_man1_MANS+=monedadelmundo-cli.1
endif

if BUILD_MONEDADELMUNDO_TX
  dist_man1_MANS+=monedadelmundo-tx.1
endif

if BUILD_MONEDADELMUNDO_UTIL
  dist_man1_MANS+=monedadelmundo-util.1
endif

if ENABLE_WALLET
if BUILD_MONEDADELMUNDO_WALLET
  dist_man1_MANS+=monedadelmundo-wallet.1
endif
endif
